--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <html>
     <body>
         <h1>Hello World</h1>
+        
+        <p>Welcome to Anita's cards. The site is currently under construction so please come back soon!</p>
     </body>
 </html>
