Added images and test image display

--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
         <h1>Hello World</h1>
         
         <p>Welcome to Anita's cards. The site is currently under construction so please come back soon!</p>
+
+        <img src="images/ladybugstack.jpg" alt="My test image">
     </body>
 </html>
